# miden-x402

./: .gitignore  Cargo.toml  OBJECTIVE.md  PLAN.md  README.md  docker-compose.yml
.reference/inicio-multisig/: Cargo.toml  rust-toolchain.toml
.reference/inicio-multisig/coordinator-server/: Cargo.toml  README.md  base_config.ron  config.rs  error.rs  lib.rs  main.rs  payload.rs  routes.rs
.reference/inicio-multisig/engine/: Cargo.toml  error.rs  lib.rs  multisig_client_runtime.rs  multisig_client_runtime__error.rs  multisig_client_runtime__msg.rs
.reference/inicio-multisig/miden-multisig-client/: Cargo.toml  error.rs  lib.rs
.reference/inicio-multisig/store/: Cargo.toml  README.md  diesel.toml  error.rs  lib.rs  persistence.rs
.reference/inicio-multisig/store/migrations/2025-08-03-205356_multisig/: down.sql  up.sql
.reference/inicio-multisig/store/persistence/: pool.rs  record.rs  schema.rs  store.rs
bench-results/: rtt.txt
crates/adn-client/: Cargo.toml
crates/adn-client/src/: client.rs  transport.rs  types.rs
crates/adn-services/: Cargo.toml
crates/adn-services/src/: lib.rs
crates/agent-debit-note/: Cargo.toml
crates/agent-debit-note/masm/: agent_debit_note.masm
crates/agent-debit-note/src/: lib.rs  message.rs  network.rs  note.rs  sdk.rs  types.rs  voucher.rs  wire.rs
crates/agent-debit-note/tests/: adn_with_merchant_relay.rs  adn_x402_http_flow.rs  adn_x402_multi_payment.rs  agent_create_p2id.rs  batch_settlement_e2e.rs  facilitator_consume_adn.rs  facilitator_consume_p2id.rs  falcon_test.rs  merge_test.rs  note_script.rs  voucher_test.rs  wire_test.rs
crates/agentic-guardian/: Cargo.toml  base_config.ron  diesel.toml
crates/agentic-guardian/migrations/2026-05-20-000000_init/: down.sql  up.sql
crates/agentic-guardian/src/: config.rs  error.rs  lib.rs
crates/agentic-guardian/src/api/: challenge.rs  mod.rs  pending.rs  register.rs  status.rs  submit.rs  x402.rs
crates/agentic-guardian/src/auth/: cold_key.rs  hot_key.rs  mod.rs
crates/agentic-guardian/src/batch/: mod.rs  worker.rs
crates/agentic-guardian/src/mandate/: ap2.rs  mod.rs
crates/agentic-guardian/src/recovery/: mod.rs
crates/agentic-guardian/src/runtime/: mod.rs  msg.rs
crates/agentic-guardian/src/state/: mod.rs  pending.rs
crates/agentic-guardian/src/storage/: memory.rs  mod.rs  postgres.rs  schema.rs  types.rs
crates/miden-agentic-client/: Cargo.toml
crates/miden-agentic-client/src/: account_setup.rs  client.rs  coordinator.rs  error.rs  key.rs  lib.rs  miden_integration.rs  p2id.rs  pending_state.rs  sign.rs  transport.rs  types.rs
crates/miden-agentic-client/tests/: e2e.rs
crates/miden-multisig-client/src/: builder.rs
crates/miden-x402-facilitator/: Cargo.toml  README.md
crates/miden-x402-facilitator/src/: balance.rs  batch.rs  buyer_auth.rs  config.rs  error.rs  handlers.rs  lib.rs  mandate.rs  node.rs  receipt.rs  settle.rs  verifier.rs  verify.rs
crates/miden-x402-facilitator/src/guardian/: auth.rs  challenge.rs  mod.rs  reservation.rs  settle.rs  verify.rs
crates/miden-x402-facilitator/src/storage/: filesystem.rs  memory.rs  mod.rs
crates/miden-x402-facilitator/tests/: approach1_guardian_p2id.rs
crates/miden-x402-types/: Cargo.toml  README.md
crates/miden-x402-types/src/: aliases.rs  header.rs  ids.rs  lib.rs  mandate.rs  network.rs  scheme.rs
crates/miden-x402-types/tests/: wire_round_trip.rs
crates/x402-facilitator-server/: Cargo.toml
crates/x402-facilitator-server/src/: adn.rs  api.rs  error.rs  jobs.rs  key.rs  lib.rs  main.rs  state.rs  store.rs  submitter.rs  types.rs
crates/x402-facilitator-server/tests/: integration_flows.rs
docs/: APPROACH1-STATUS.md  APPROACH2-STATUS.md  UPSTREAM_WISHLIST.md  agentic-guardian-deployment.md  ap2-mandate.md  deploy.md  flow-diagrams.md  mandate.md  protocol.md  scheme_exact_miden.md  smoke-testnet.md  tweet-thread.md  x402-scheme-analysis.md
docs/superpowers/plans/: 2026-05-25-batch-settlement-spec.md
examples/reference-merchant/: Cargo.toml
examples/reference-merchant/src/: main.rs
examples/setup-testnet/: Cargo.toml
examples/setup-testnet/src/: main.rs
examples/x402-bench/: Cargo.toml
examples/x402-bench/src/: main.rs
ideas/: DESIGN.md  DESIGN_COMPLIANCE.md  NEW_DESIGN.md  PHASE4_FINDINGS.md
scripts/: README.md  bench-aws.sh  bench-full.sh  bench-local.sh  benchmark-aws.sh  deploy-server.sh  run-network-bench.sh
sdks/node/: README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
sdks/node/examples/demo-agent/: package.json
sdks/node/examples/demo-agent/src/: agent.ts
sdks/node/examples/demo-merchant-express/: package.json
sdks/node/examples/demo-merchant-express/src/: server.ts
sdks/node/examples/demo-merchant-hono/: package.json
sdks/node/examples/demo-merchant-hono/src/: server.ts
sdks/python/: README.md  pyproject.toml
sdks/python/examples/demo-merchant-fastapi/: server.py
sdks/python/examples/demo-merchant-flask/: server.py
sdks/python/src/miden_x402/: __init__.py  core.py  fastapi.py  flask.py  headers.py  types.py
tests/: adn_merchant_consumes_p2id.rs  adn_x402_merchant_settlement.rs  agent_create_adn.rs
