[workspace]
resolver = "2"
members = [
    "crates/miden-x402-types",
    "crates/miden-x402-facilitator",
]

[workspace.package]
edition       = "2024"
rust-version  = "1.93"
license       = "Apache-2.0"
repository    = "https://github.com/ermvrs/miden-x402"

# OpenZeppelin Guardian crates are consumed from the public github repo.
# Currently pinned to `branch = "main"`; before a release, pin to a specific
# tag (e.g. `tag = "v0.14.6"`) so the build is reproducible.
[workspace.dependencies]
# Shared primitives
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
base64      = "0.22"
async-trait = "0.1"
hex         = "0.4"
blake3      = "1"
rand        = "0.9"

# x402 protocol
x402-types  = "1.4"

# Miden — pinned to match OZ Guardian's workspace (0.14.5)
miden-protocol  = "=0.14.5"
miden-client    = { git = "https://github.com/0xMiden/miden-client.git", branch = "main", features = ["tonic", "testing"] }
miden-client-sqlite-store = { git = "https://github.com/0xMiden/miden-client.git", branch = "main" }
miden-standards = "=0.14.5"
miden-tx        = "=0.14.5"
miden-remote-prover-client = "0.14"
miden-crypto    = "0.23"

# OpenZeppelin Guardian — git deps (see note above)
guardian-server       = { git = "https://github.com/OpenZeppelin/guardian", branch = "main" }
guardian-shared       = { git = "https://github.com/OpenZeppelin/guardian", branch = "main" }
guardian-client       = { git = "https://github.com/OpenZeppelin/guardian", branch = "main" }
miden-multisig-client = { git = "https://github.com/OpenZeppelin/guardian", branch = "main" }
miden-rpc-client      = { git = "https://github.com/OpenZeppelin/guardian", branch = "main" }
miden-confidential-contracts = { git = "https://github.com/OpenZeppelin/guardian", branch = "main" }
miden-keystore        = { git = "https://github.com/OpenZeppelin/guardian", branch = "main" }

# HTTP / runtime / observability
axum               = { version = "0.8", features = ["macros"] }
tokio              = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tower              = "0.5"
tower-http         = { version = "0.6", features = ["trace", "cors"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal
miden-x402-types = { version = "0.1", path = "crates/miden-x402-types" }
