[package]
name = "adn-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Agent client for AgentDebitNote x402 payments — sign-only, no proving"

[dependencies]
agent-debit-note = { path = "../agent-debit-note" }
miden-protocol = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
