[package]
name = "adn-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Agent client for AgentDebitNote x402 payments — sign-only, no proving, no network"

[dependencies]
agent-debit-note = { path = "../agent-debit-note" }
miden-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
