[package]
name = "adn-services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Standalone binaries for ADN batch-settlement: facilitator, merchant, agent"

[[bin]]
name = "adn-facilitator"
path = "src/bin/facilitator.rs"

[[bin]]
name = "adn-merchant"
path = "src/bin/merchant.rs"

[[bin]]
name = "adn-agent"
path = "src/bin/agent.rs"

[dependencies]
agent-debit-note = { path = "../agent-debit-note" }

miden-client = { git = "https://github.com/0xMiden/miden-client.git", branch = "main", features = ["testing", "tonic"] }
miden-client-sqlite-store = { git = "https://github.com/0xMiden/miden-client.git", branch = "main" }
miden-protocol = { workspace = true }
miden-standards = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
rand = { workspace = true }
base64 = { workspace = true }
