[package]
name        = "miden-agentic-client"
version     = "0.1.0"
description = "Rust client SDK for the agentic-guardian flow per `ideas/NEW_DESIGN.md`. Sign-without-prove + per-agent pending-state tracking + HTTP coordinator client."
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
miden-x402-types = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
base64           = { workspace = true }
hex              = "0.4"
async-trait      = { workspace = true }

# Miden — same versions as agentic-guardian
miden-client    = { workspace = true }
miden-standards = { workspace = true }
miden-protocol  = "0.14"
miden-crypto    = "0.23"

# HTTP coordinator client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url     = { version = "2", features = ["serde"] }

# Async / observability
tokio   = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
