[package]
name = "miden-agentic-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Agent-paced sign-without-prove client for x402 payments on Miden"

[lib]
name = "miden_agentic_client"
path = "src/lib.rs"

[dependencies]
# Vendored helpers we'll reuse pieces of
guardian-shared = { path = "../shared" }
miden-keystore = { path = "../miden-keystore" }
miden-rpc-client = { path = "../miden-rpc-client" }
miden-confidential-contracts = { path = "../contracts" }

# Async + HTTP
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serde
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# RNG (rand_chacha is used by miden-keystore's seeded RNG path)
rand = { workspace = true }
rand_chacha = { workspace = true }

# Errors
thiserror = { workspace = true }
anyhow = { workspace = true }

# Miden
miden-protocol = { workspace = true }
miden-client = { workspace = true, features = ["tonic"] }
miden-client-sqlite-store = { workspace = true }
miden-standards = { workspace = true }
miden-tx = { workspace = true }

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
x402-facilitator-server = { path = "../x402-facilitator-server" }
axum = "0.8.6"
