[package]
name        = "miden-x402-facilitator"
version     = "0.1.0"
description = "x402 v2 facilitator service for the Miden network"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name = "miden_x402_facilitator"
path = "src/lib.rs"

[[bin]]
name = "miden-x402-facilitator"
path = "src/bin/miden_x402_facilitator.rs"

[dependencies]
miden-x402-types   = { workspace = true }
x402-types         = { workspace = true }

serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
async-trait        = { workspace = true }

miden-client       = { workspace = true }
miden-standards    = { workspace = true }

axum               = { workspace = true }
tokio              = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
