[package]
name        = "miden-x402-facilitator"
version     = "0.1.0"
description = "x402 v2 facilitator service for the Miden network"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name = "miden_x402_facilitator"
path = "src/lib.rs"

[[bin]]
name = "miden-x402-facilitator"
path = "src/bin/miden_x402_facilitator.rs"

[[bin]]
name = "miden-x402-smoke-testnet"
path = "src/bin/smoke_testnet.rs"

[[bin]]
name = "miden-x402-create-accounts"
path = "src/bin/create_accounts.rs"

[[bin]]
name = "miden-x402-check-buyer"
path = "src/bin/check_buyer.rs"

[[bin]]
name = "miden-x402-pay-and-verify"
path = "src/bin/pay_and_verify.rs"

[[bin]]
name = "miden-x402-claim-payment"
path = "src/bin/claim_payment.rs"

[dependencies]
miden-x402-types   = { workspace = true }
x402-types         = { workspace = true }

serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
async-trait        = { workspace = true }

miden-client       = { workspace = true }
miden-client-sqlite-store = "0.14"
miden-protocol     = "0.14"
miden-standards    = { workspace = true }
rand               = "0.9"

axum               = { workspace = true }
tokio              = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
