[package]
name        = "miden-x402-facilitator"
version     = "0.1.0"
description = "Guardian-as-x402-facilitator: x402 v2 module bolted onto an OZ Guardian server"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name = "miden_x402_facilitator"
path = "src/lib.rs"

[[bin]]
name = "guardian-facilitator"
path = "src/bin/guardian_facilitator.rs"

[dependencies]
miden-x402-types   = { workspace = true }
x402-types         = { workspace = true }

serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
async-trait        = { workspace = true }
base64             = { workspace = true }
hex                = { workspace = true }
blake3             = { workspace = true }
rand               = { workspace = true }

# Miden — pinned to OZ Guardian's workspace versions
miden-protocol     = { workspace = true }
miden-client       = { workspace = true }
miden-standards    = { workspace = true }
miden-tx           = { workspace = true }
miden-remote-prover-client = { workspace = true }
miden-crypto       = { workspace = true }

# OpenZeppelin Guardian — the facilitator is a module bolted onto Guardian
guardian-server       = { workspace = true }
guardian-shared       = { workspace = true }
miden-rpc-client      = { workspace = true }

axum               = { workspace = true }
tokio              = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = "1"

[dev-dependencies]
tower    = { workspace = true, features = ["util"] }
tempfile = "3"
tokio    = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
miden-client-sqlite-store = { workspace = true }
miden-confidential-contracts = { workspace = true }
miden-multisig-client = { workspace = true }
miden-keystore = { workspace = true }
