[package]
name        = "miden-x402-types"
version     = "0.1.0"
description = "x402 v2 wire types for the Miden network"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
base64      = { workspace = true }
x402-types  = { workspace = true }
