[package]
name = "reference-merchant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Minimal x402 merchant paywall for end-to-end testing"
publish = false

[[bin]]
name = "reference-merchant"
path = "src/main.rs"

[dependencies]
axum = "0.8.6"
tokio = { workspace = true, features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

anyhow = { workspace = true }
dotenvy = "0.15"
