[package]
name = "x402-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "End-to-end x402-on-Miden benchmark harness"
publish = false

[[bin]]
name = "x402-bench"
path = "src/main.rs"

[dependencies]
miden-agentic-client = { path = "../../crates/miden-agentic-client" }
adn-client = { path = "../../crates/adn-client" }
agent-debit-note = { path = "../../crates/agent-debit-note" }
miden-protocol = { workspace = true }

tokio = { workspace = true, features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
hex = { workspace = true }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
base64 = { workspace = true }
dotenvy = "0.15"
