[package]
edition.workspace = true
name              = "miden-multisig-coordinator-server"
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default   = []
sysbundle = ["dep:openssl-sys", "dep:pq-sys"]

[package.metadata.cargo-machete]
ignored = ["humantime-serde", "openssl-sys", "pq-sys"]

[dependencies]
anyhow                            = { workspace = true }
axum                              = "0.8"
bon                               = { workspace = true }
chrono                            = { workspace = true }
config                            = { default-features = false, features = ["ron"], version = "0.15" }
dissolve-derive                   = { workspace = true }
humantime-serde                   = "1.1"
itertools                         = "0.14"
miden-client                      = { workspace = true }
miden-multisig-coordinator-domain = { features = ["serde"], workspace = true }
miden-multisig-coordinator-engine = { workspace = true }
miden-multisig-coordinator-store  = { workspace = true }
openssl-sys                       = { features = ["vendored"], optional = true, version = "0.9" }
pq-sys                            = { features = ["bundled"], optional = true, version = "0.7" }
serde                             = { features = ["derive"], workspace = true }
serde_with                        = { features = ["base64", "macros"], workspace = true }
thiserror                         = "2"
tokio                             = { features = ["rt-multi-thread", "signal"], workspace = true }
tower-http                        = { features = ["cors", "trace"], version = "0.6" }
tracing                           = { workspace = true }
tracing-subscriber                = { features = ["env-filter"], version = "0.3" }
uuid                              = { features = ["serde"], workspace = true }
