[package]
description = "A rust client for Miden multisig wallets"
edition     = "2024"
license     = "MIT"
name        = "miden-multisig-client"
repository  = "https://github.com/0xMiden/MultiSig"
version     = "0.1.0"

[lints]
workspace = true

[dependencies]
miden-client = { features = ["tonic"], workspace = true }
rand         = { workspace = true }
thiserror    = { workspace = true }
tokio        = { default-features = false, workspace = true }

[dev-dependencies]
miden-client              = { features = ["testing", "tonic"], version = "0.13" }
miden-multisig-test-utils = { workspace = true }
