[package]
edition.workspace = true
name              = "miden-multisig-coordinator-store"
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bon                               = { workspace = true }
chrono                            = { workspace = true }
diesel                            = { default-features = false, features = ["chrono", "uuid"], version = "2" }
diesel-async                      = { features = ["deadpool", "postgres"], version = "0.7" }
dissolve-derive                   = { workspace = true }
futures                           = { default-features = false, version = "0.3" }
miden-client                      = { workspace = true }
miden-multisig-coordinator-domain = { workspace = true }
oblux                             = "0.1"
rustls                            = { default-features = false, version = "0.23" }
rustls-native-certs               = "0.8"
thiserror                         = { workspace = true }
tokio                             = { features = ["rt-multi-thread"], workspace = true }
tokio-postgres                    = "0.7"
tokio-postgres-rustls             = "0.13"
tracing                           = { workspace = true }
uuid                              = { workspace = true }
